<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Hanoi">Hanoi</string>
    <string name="Sunny">Sunny</string>
    <string name="Cloudy">Cloudy</string>
    <string name="Sunny_and_Cloudy">Sunny and cloudy</string>
    <string name="Snowflake" translatable="true">Snowflake</string>
    <string name="Rain">Rain</string>
    <string name="Thu">Thursday</string>
    <string name="Fri">Friday</string>
    <string name="Sat">Saturday</string>
    <string name="Sun">Sunday</string>
    <string name="Storm" translatable="true">Storm</string>
</resources>