<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherAndForecastFragment"
    android:padding="50dp"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="0dp"
        android:background="@color/green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12°C Storm"
            android:textSize="20sp">

        </TextView>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/storm">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/Hanoi"
            android:textSize="20sp">

        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/light_blue"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/Thu" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/sun" />

            <TextView
                android:layout_width="183dp"
                android:layout_height="50dp"
                android:text="@string/Sunny" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/Fri" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/sun_cloud" />

            <TextView
                android:layout_width="183dp"
                android:layout_height="50dp"
                android:text="@string/Sunny_and_Cloudy" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/Sat" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/storm" />

            <TextView
                android:layout_width="183dp"
                android:layout_height="50dp"
                android:text="@string/Storm" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/Sun" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:src="@drawable/cloudy" />

            <TextView
                android:layout_width="183dp"
                android:layout_height="50dp"
                android:text="@string/Cloudy" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>